fix: light scrollbar for light-themed editors in Legend Studio (#2042)

--- a/packages/legend-application-studio/style/components/editor/uml-editor/_uml-element-editor.scss
+++ b/packages/legend-application-studio/style/components/editor/uml-editor/_uml-element-editor.scss
@@ -20,6 +20,10 @@
   height: 100%;
   width: 100%;
 
+  ::-webkit-scrollbar-thumb {
+    background: var(--color-light-grey-400);
+  }
+
   .panel {
     height: 100%;
 
